# ssw_lab_5sem

./: .gitignore  README.md
.github/: stale.yml
lab_01/: CMakeLists.txt  README.md  test.p
lab_01/src/: lab_01.cpp  lab_01.h  main.cpp
lab_02/: CMakeLists.txt  README.md  test.p
lab_02/src/: Lexem.cpp  Lexem.h  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h  Variable.cpp  Variable.h  lab_02.cpp  lab_02.h  main.cpp
lab_03/: CMakeLists.txt  README.md  test.p
lab_03/src/: Lexem.cpp  Lexem.h  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h  Tree.h  Variable.cpp  Variable.h  lab_03.cpp  lab_03.h  main.cpp
lab_04/: AStyle.bat  CMakeLists.txt  README.md  test.p
lab_04/src/: GenCode.cpp  GenCode.h  Lexem.cpp  Lexem.h  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h  Tree.cpp  Tree.h  Variable.cpp  Variable.h  lab_04.cpp  lab_04.h  main.cpp
